# curl-parser

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/converters/: mod.rs
src/converters/nodejs/: axios.rs  mod.rs
src/converters/python/: mod.rs  requests.rs
src/parser/: command.rs  error.rs  mod.rs  parsers.rs  tokenizer.rs
tests/: mod.rs
tests/nodejs/: mod.rs
tests/nodejs/axios/: mod.rs  test_binary_file_uploads.rs  test_custom_http_methods.rs  test_feature_integration.rs  test_json_support.rs  test_oauth2_bearer.rs
tests/python/requests/: test_binary_file_uploads.rs  test_custom_http_methods.rs  test_feature_integration.rs  test_json_support.rs  test_oauth2_bearer.rs
