[package]
name = "curl-parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "curl_parser"
path = "src/lib.rs"

[[bin]]
name = "curl-parser"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.4"
